# SWStenDSL

./: .gitignore  CMakeLists.txt  README.md
doc/: SW Dialect.md  Stencil Dialect.md  StencilDSL.md
examples/2d121pt_box/: makefileMPI  stencil_2d121pt_box.dsl  stencil_2d121pt_box_driver.mpi.c  stencil_2d121pt_box_driver.serial.c  stencil_2d121pt_box_kernel.openacc.c  stencil_2d121pt_box_kernel.serial_master.c  stencil_2d121pt_box_kernel.serial_slave.c
examples/2d5pt_arbitrary_shape/: stencil_2d5pt_arbitrary_shape.dsl  stencil_2d5pt_arbitrary_shape_driver.mpi.c  stencil_2d5pt_arbitrary_shape_driver.serial.c  stencil_2d5pt_arbitrary_shape_kernel.openacc.c  stencil_2d5pt_arbitrary_shape_kernel.serial_master.c  stencil_2d5pt_arbitrary_shape_kernel.serial_slave.c
examples/2d5pt_nested/: stencil_2d5pt_nested.dsl  stencil_2d5pt_nested_driver.mpi.c  stencil_2d5pt_nested_driver.serial.c  stencil_2d5pt_nested_kernel.openacc.c  stencil_2d5pt_nested_kernel.serial_master.c  stencil_2d5pt_nested_kernel.serial_slave.c
examples/2d81pt_box/: makefileSerial  stencil_2d81pt_box.dsl  stencil_2d81pt_box_driver.mpi.c  stencil_2d81pt_box_driver.serial.c  (+3 more)
include/Parser/: AST.h  (+3 more)
lib/: CMakeLists.txt
result/: benchmark.csv  heatmap_result
src/: CMakeLists.txt  stenCC.cpp
tool/: athread_openacc_compare.py  athread_openacc_compare_onsunway.py  build_examples.sh  heatmap.py  heatmap_graph.py  heatmap_onsunway.py  rebuild.sh  scalability.py  scalability_graph.py  scalability_onsunway.py  speedup.py  translate.py
utils/: Makefile  dma_lib.h  mpi_io.c  mpi_io.h  mpi_lib.c  mpi_lib.h
(+122 files in other folders)
